apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'kotlin-parcelize'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'org.jmailen.kotlinter'
apply plugin: 'androidx.navigation.safeargs.kotlin'

android {
    compileSdk 34


    defaultConfig {
        applicationId "ceui.lisa.pixiv"
        minSdkVersion 23
        targetSdkVersion 34
        versionCode 506
        versionName "5.0.6"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    signingConfigs {
        release {
            storeFile file("../keystore.jks")
            storePassword "123456"
            keyAlias 'CeuiLiSA'
            keyPassword '123456'
        }
    }

    buildTypes {
        debug {
            minifyEnabled false
            buildConfigField "boolean", "IS_DEBUG_MODE", "true" // 在 debug 模式下为 true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
        release {
            minifyEnabled false
            buildConfigField "boolean", "IS_DEBUG_MODE", "false" // 在 release 模式下为 false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    sourceSets {
        main {
            //jni库的调用会到资源文件夹下libs里面找so文件
            jniLibs.srcDirs = ['libs']
        }
    }

    buildFeatures {
        dataBinding true
        viewBinding true
        buildConfig = true // 启用 BuildConfig
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/MANIFEST.MF']
        }
    }

    namespace 'ceui.lisa'
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_21
    }
}

dependencies {
    testImplementation("junit:junit:4.13.2")

    // AndroidX Test - JUnit Runner
    androidTestImplementation("androidx.test.ext:junit:1.1.5")
    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")

    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.google.android.material:material:1.12.0'

    //=============== lifecycle
    def lifecycle_version = '2.8.7'

    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"


    //=============== Navigation
    def nav_version = "2.8.5"
    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"

    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.25"
    implementation "androidx.core:core-ktx:1.13.1"

    api 'com.squareup.retrofit2:retrofit:2.11.0'
    api 'com.squareup.retrofit2:converter-gson:2.11.0'
    api 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'

    api 'io.reactivex.rxjava2:rxjava:2.2.21'
    api 'io.reactivex.rxjava2:rxandroid:2.1.1'

    implementation(project(":annotations")) // 1
    implementation(project(":processor")) // 2
    kapt(project(":processor")) // 3

    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'
    kapt 'com.github.bumptech.glide:compiler:4.16.0'

    implementation 'com.github.lzyzsd:circleprogress:1.2.1'

    def refresh_version = "3.0.0-alpha"
    implementation "io.github.scwang90:refresh-layout-kernel:$refresh_version"     //核心必须依赖
    implementation "io.github.scwang90:refresh-header-classics:$refresh_version"    //经典刷新头
    implementation "io.github.scwang90:refresh-header-falsify:$refresh_version"     //虚拟刷新头
    implementation "io.github.scwang90:refresh-header-material:$refresh_version"    //谷歌刷新头
    implementation "io.github.scwang90:refresh-footer-classics:$refresh_version"    //经典加载

    // okhttp3系列组件版本最高到 4.4.1，参看 RubySSLSocketFactory
    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
    implementation 'androidx.room:room-runtime:2.5.0'
    implementation "androidx.room:room-ktx:2.5.0"
    implementation "androidx.room:room-paging:2.5.0"

    kapt 'androidx.room:room-compiler:2.5.0'
    implementation 'com.github.Justson.AgentWeb:agentweb-core:v4.1.9-androidx'
    implementation 'com.github.Justson.AgentWeb:agentweb-filechooser:v4.1.9-androidx'
    implementation 'com.facebook.rebound:rebound:0.3.8'
    implementation("org.sufficientlysecure:html-textview:3.9")
    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
    implementation 'com.qmuiteam:qmui:2.0.1'
    implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
    implementation 'gdut.bsx:share2:0.9.3'
    implementation 'com.github.skydoves:transformationlayout:1.1.1'
    implementation 'com.blankj:utilcodex:1.31.1'
    implementation 'com.safframework.log:saf-logginginterceptor:1.6.0'
    implementation 'com.google.firebase:firebase-analytics:22.1.2'
    implementation 'com.google.firebase:firebase-crashlytics:19.2.1'

    implementation 'com.afollestad:drag-select-recyclerview:2.4.0'


    implementation 'com.jaredrummler:colorpicker:1.1.0'
    implementation 'androidx.core:core-splashscreen:1.0.1'


    implementation 'com.effective.android:panelSwitchHelper-androidx:1.3.13'
    implementation 'com.makeramen:roundedimageview:2.3.0'

    implementation 'io.github.csdn-mobile:RoundView:1.8.0'


    // okhttp3系列组件版本最高到 4.4.1，参看 RubySSLSocketFactory
    implementation 'com.squareup.okhttp3:okhttp:4.4.1'


    def lottieVersion = "3.4.1"
    implementation "com.airbnb.android:lottie:$lottieVersion"

    implementation 'xyz.zpayh:hdimageview:3.0.2'

    implementation project(path: ':models')
    implementation project(path: ':progressmanager')
    implementation project(path: ':flowlayout-lib')
    implementation 'com.waynejo:androidndkgif:0.3.3'

    implementation 'com.tencent:mmkv-static:2.2.2'
    implementation 'com.github.tbruyelle:RxPermissions:0.12'


    implementation 'androidx.webkit:webkit:1.12.1'
    implementation 'org.jsoup:jsoup:1.18.1'

    implementation 'com.hjq:toast:8.8'
    implementation 'com.jakewharton.timber:timber:5.0.1'


    def paging_version = "3.3.6"
    implementation "androidx.paging:paging-runtime-ktx:$paging_version"

    testImplementation 'junit:junit:4.13.2'

    implementation 'com.github.yalantis:ucrop:2.2.10'

    implementation "androidx.documentfile:documentfile:1.0.1"
    implementation 'com.billy.android:smart-swipe:1.1.2'
    implementation 'org.honorato.multistatetogglebutton:multistatetogglebutton:0.2.2'
    implementation "io.noties.markwon:core:4.6.2"
    // Java language implementation
    implementation("androidx.activity:activity-ktx:1.9.3")
    implementation("com.google.android.flexbox:flexbox:3.0.0")

    implementation("io.github.panpf.zoomimage:zoomimage-view-sketch4:1.1.0-rc03")

    implementation("me.zhanghai.android.fastscroll:library:1.2.0")

    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'

    configurations {
        all*.exclude group: 'com.android.support', module: 'support-v13'
    }
}

//lintKotlin.dependsOn(formatKotlin)
